--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -606,7 +606,7 @@
   "and": "و",
   "enjoy": "يتمتع",
   "bonus": "علاوة",
-  "featured_product": "المنتج المميز",
+  "featured_product": "MAIDC منتج معتمد",
   "latest_product": "أحدث المنتجات",
   "minimum": "الحد الأدنى",
   "user_account_was_deleted": "تم حذف حساب المستخدم",
