--- a/assets/language/bn.json
+++ b/assets/language/bn.json
@@ -610,7 +610,7 @@
   "and": "এবং",
   "enjoy": "উপভোগ করুন",
   "bonus": "বোনাস",
-  "featured_product": "ফিচার্ড পণ্য",
+  "featured_product": "MAIDC প্রত্যয়িত পণ্য",
   "latest_product": "সর্বশেষ পণ্য",
   "minimum": "সর্বনিম্ন",
   "user_account_was_deleted": "ব্যবহারকারী অ্যাকাউন্ট মুছে ফেলা হয়েছিল",
