--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -611,7 +611,7 @@
   "and" : "And",
   "enjoy": "enjoy",
   "bonus": "Bonus",
-  "featured_product": "Featured Product",
+  "featured_product": "MAIDC Certified Products",
   "latest_product": "Latest Product",
   "minimum": "Minimum",
   "user_account_was_deleted": "User account was deleted",
