--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -610,7 +610,7 @@
   "and": "Y",
   "enjoy": "disfrutar",
   "bonus": "Prima",
-  "featured_product": "Producto destacado",
+  "featured_product":"MAIDC Producto certificado",
   "latest_product": "Último producto",
   "minimum": "Mínimo",
   "user_account_was_deleted": "Se eliminó la cuenta de usuario",
