--- a/assets/language/hi.json
+++ b/assets/language/hi.json
@@ -12,7 +12,8 @@
   "all_product": "सभी प्रोडक्ट",
   "flash_deal": "फादल सौदा",
   "brand": "ब्रांड्स",
-  "featured_products": "विशेष रुप से प्रदर्शित प्रोडक्टस",
+  "featured_product" : "MAIDC प्रमाणित प्रोडक्टस",
+  "featured_products": "विशेष रुप से प्रमाणित  प्रोडक्टस",
   "featured_deals": "विशेष रुप से प्रदर्शित सौदे",
   "top_seller": "शीर्ष विक्रेता",
   "latest_products": "नवीनतम उत्पाद",
