update address issue

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -49,6 +49,7 @@
   "skip_for_now": "تخطي في الوقت الراهن",
   "CONFIRM_YOUR_MAIL": "قم بتأكيد بريدك",
   "START": "بداية",
+  "update_address": "تحديث العنوان",
   "UPDATE_ADDRESS": "تحديث العنوان",
   "ENTER_YOUR_ZIP_CODE": "أدخل رمزك البريدي",
   "ENTER_YOUR_CITY": "أدخل مدينتك",
