--- a/assets/language/bn.json
+++ b/assets/language/bn.json
@@ -12,6 +12,7 @@
   "all_product": "সব পণ্য",
   "flash_deal": "ফ্ল্যাশ ডিল",
   "brand": "ব্র্যান্ড",
+  "update_address": "ঠিকানা আপডেট করুন",
   "featured_products": "বৈশিষ্ট্যযুক্ত পণ্য",
   "featured_deals": "বৈশিষ্ট্যযুক্ত ডিল",
   "top_seller": "শীর্ষ বিক্রেতা",
