--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -49,6 +49,7 @@
   "skip_for_now": "Skip for Now",
   "CONFIRM_YOUR_MAIL": "Confirm Your Mail",
   "START": "Start",
+  "update_address": "Update Address",
   "UPDATE_ADDRESS": "Add Address",
   "ENTER_YOUR_ZIP_CODE": "Enter your zip code",
   "ENTER_YOUR_CITY": "Enter your city",
@@ -273,7 +274,7 @@
   "edit": "Edit",
   "delete": "Delete",
   "city": "City",
-  "zip": "Zip Code",
+  "zip": "Pin Code",
   "additional_note": "Additional note",
   "shipping_and_billing_is_same": "Shipping and Billing Address is same",
   "select_delivery_address": "Select Delivery Address",
