--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -8,6 +8,7 @@
   "search_hint": "Producto de búsqueda ...",
   "WISH_LIST_SEARCH": "Búsqueda de la lista de deseos",
   "CATEGORY": "Categorías",
+  "update_address": "Actualizar dirección",
   "VIEW_ALL": "Ver todo",
   "all_product": "Todos los productos",
   "flash_deal": "Acuerdo",
