--- a/assets/language/hi.json
+++ b/assets/language/hi.json
@@ -49,7 +49,8 @@
   "re_enter_password": "पासवर्ड फिर से दर्ज करें",
   "skip_for_now": "अभी के लिए छोड़ दे",
   "CONFIRM_YOUR_MAIL": "अपने मेल की पुष्टि करें",
-  "START": "शुरू",
+  "START": "शुरू", 
+  "update_address": "पता अपडेट करें",
   "UPDATE_ADDRESS": "पता जोड़ें",
   "ENTER_YOUR_ZIP_CODE": "अपना ज़िप कोड दर्ज करें",
   "ENTER_YOUR_CITY": "अपने शहर में प्रवेश करें",
