address state done

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -50,6 +50,7 @@
   "CONFIRM_YOUR_MAIL": "قم بتأكيد بريدك",
   "START": "بداية",
   "update_address": "تحديث العنوان",
+  "state_is_required": "الدولة مطلوبة",
   "UPDATE_ADDRESS": "تحديث العنوان",
   "ENTER_YOUR_ZIP_CODE": "أدخل رمزك البريدي",
   "ENTER_YOUR_CITY": "أدخل مدينتك",
