--- a/assets/language/bn.json
+++ b/assets/language/bn.json
@@ -14,6 +14,7 @@
   "brand": "ব্র্যান্ড",
   "update_address": "ঠিকানা আপডেট করুন",
   "featured_products": "বৈশিষ্ট্যযুক্ত পণ্য",
+  "state_is_required": "রাষ্ট্র প্রয়োজন",
   "featured_deals": "বৈশিষ্ট্যযুক্ত ডিল",
   "top_seller": "শীর্ষ বিক্রেতা",
   "latest_products": "সাম্প্রতিক পণ্যসমূহ",
