--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -50,6 +50,7 @@
   "CONFIRM_YOUR_MAIL": "Confirm Your Mail",
   "START": "Start",
   "update_address": "Update Address",
+  "state_is_required": "State is required",
   "UPDATE_ADDRESS": "Add Address",
   "ENTER_YOUR_ZIP_CODE": "Enter your zip code",
   "ENTER_YOUR_CITY": "Enter your city",
