--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -28,6 +28,7 @@
   "questions": "Preguntas frecuentes",
   "q": "Q",
   "a": "A",
+  "state_is_required": "Se requiere estado",
   "related_products": "Productos relacionados",
   "add_to_cart": "Añadir a la cesta",
   "buy_now": "Comprar ahora",
