solved address and GST issue

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -458,7 +458,7 @@
   "send_a_message": "ارسل رسالة",
   "price": "سعر",
   "clear": "واضح",
-  "inc_vat_tax": "(Inc.Vat/Tax)",
+  "inc_vat_tax": "(Inc. GST)",
   "add_more_for_free_delivery": "أضف المزيد للتسليم المجاني",
   "no_product_in_cart": "لا توجد منتجات في عربة التسوق الخاصة بك",
   "continue_shopping": "مواصلة التسوق",
