--- a/assets/language/bn.json
+++ b/assets/language/bn.json
@@ -462,7 +462,7 @@
   "send_a_message": "একটি মেসেজ পাঠান",
   "price": "দাম",
   "clear": "ক্লিয়ার",
-  "inc_vat_tax": "(ভ্যাট/ট্যাক্স)",
+  "inc_vat_tax": "(Inc. GST)",
   "add_more_for_free_delivery": "বিনামূল্যে ডেলিভারির জন্য আরও যুক্ত করুন",
   "no_product_in_cart": "আপনার কার্টে কোনো পণ্য নেই",
   "continue_shopping": "কেনাকাটা চালিয়ে যান",
