--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -463,7 +463,7 @@
   "clear": "Clear",
   "shipping_time": "Shipping Time",
   "days": "Days",
-  "inc_vat_tax": "(inc.VAT/TAX)",
+  "inc_vat_tax": "(Inc.GST)",
   "add_more_for_free_delivery": "Add more for free delivery",
   "no_product_in_cart": "There are no  products in your cart",
   "continue_shopping": "Continue Shopping",
