--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -462,7 +462,7 @@
   "send_a_message": "Enviar un mensaje",
   "price": "Precio",
   "clear": "Claro",
-  "inc_vat_tax": "(Inc.Vat/Tax)",
+  "inc_vat_tax": "(Inc.GST)",
   "add_more_for_free_delivery": "Agregue más para entrega gratuita",
   "no_product_in_cart": "No hay productos en su cesta",
   "continue_shopping": "Seguir comprando",
