--- a/assets/language/hi.json
+++ b/assets/language/hi.json
@@ -458,7 +458,7 @@
   "product_list": "उत्पादों की सूची",
   "price": "कीमत",
   "clear": "स्पष्ट",
-  "inc_vat_tax": "(inc.vat/कर)",
+  "inc_vat_tax": "(Inc.GST)",
   "internal_server_error": "आंतरिक सर्वर त्रुटि",
   "picture_uploaded_by": "द्वारा अपलोड की गई तस्वीर",
   "contact_person_name_is_required": "संपर्क व्यक्ति का नाम आवश्यक है",
